# GenAI-Project

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.dev  README.md  detailed_architecture.docx  docker-compose.dev.yml  docker-compose.yml  nginx.conf  pyproject.toml  run_backend.py
.github/workflows/: develop.yml  main.yml  pr.yml
frontend/: index.html  next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.js  page.js
frontend/components/: PipelineVisualizer.js  ScoreDisplay.js  StagePanel.js  TopicInput.js
frontend/css/: style.css
frontend/js/: api.js  app.js  state.js  ui.js
frontend/lib/: api.js  pipeline-state.js
guides/: member-1-research.md  member-2-planning.md  member-3-writing.md  member-4-editing.md  member-5-optimization.md
monitoring/: prometheus.yml
prompts/: editing.md  optimization.md  planning.md  research.md  writing.md
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_editing.py  test_optimization.py  test_orchestrator.py  test_planning.py  test_research.py  test_writing.py
